# example-description-datacatalogtordf

./: .gitignore  README.md  pyproject.toml
example-output/: dataset_description.ttl
src/example-description-datacatalogtordf/: dataset_description.py
